fix: icon-sound img

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- 跑馬燈 -->
     <div class="marquee d-flex flex-row py-2 justify-content-between align-items-center" style="overflow:hidden;">
       <div class="me-1">
-        <img class="icon-broadcast" src="assets/img/icon-sound.png" alt="broadcast">
+        <img class="icon-broadcast" src="assets/img/icon-sound.svg" alt="broadcast">
       </div>
       <div class="marquee-info w-100 d-flex flex-row align-items-center me-1 fs-8">
         <div>★ test marquee 111111 test marquee 11111 ★</div>
