--- a/index.html
+++ b/index.html
@@ -185,20 +185,20 @@
           <div class="d-flex flex-row justify-content-end">
             <a class=" text-center text-white text-decoration-none" href="./add_value.html">
               <div class="d-flex flex-column justify-content-end">
-                <img style="margin-bottom:-10px" src="assets/img/add_value.png" alt="add_value">
-                <span class="fs-8 lh-sm align-text-bottom text-primary">儲值</span>
+                <img style="margin-bottom:-8px" src="assets/img/add_value_icon.svg" alt="add_value">
+                <span class="fs-8 lh-sm align-text-bottom text-dark">儲值</span>
               </div>
             </a>
             <a class=" text-center text-white text-decoration-none" href="./transe_point.html">
               <div class="d-flex flex-column justify-content-end">
-                <img style="margin-bottom:-10px" src="assets/img/transe.png" alt="transe">
-                <span class="fs-8 lh-sm align-text-bottom text-primary">轉點</span>
+                <img style="margin-bottom:-8px" src="assets/img/transe_icon.svg" alt="transe">
+                <span class="fs-8 lh-sm align-text-bottom text-dark">轉點</span>
               </div>
             </a>
             <a class="text-center text-white text-decoration-none" href="./auction.html">
               <div class="d-flex flex-column justify-content-end">
-                <img style="margin-bottom:-10px" src="assets/img/auction_icon.png" alt="">
-                <span class="fs-8 lh-sm align-text-bottom text-primary">拍賣</span>
+                <img style="margin-bottom:-8px" src="assets/img/auction_icon_home.svg" alt="">
+                <span class="fs-8 lh-sm align-text-bottom text-dark">拍賣</span>
               </div>
             </a>
           </div>
