fix: account page href

--- a/account.html
+++ b/account.html
@@ -48,7 +48,7 @@
       <div class="info-header">
         <div class="header-title">VIP等級</div>
         <div>
-          <a class="d-block" href="account_detail.html" style="height: 27px;width: 68px;position: absolute;"></a>
+          <a class="d-block" href="vip_level.html" style="height: 27px;width: 68px;position: absolute;"></a>
           <div>
             <img src="./assets/img/vip-header-detail.svg" class="header-detail" alt="">
           </div>
