--- a/account.html
+++ b/account.html
@@ -57,13 +57,15 @@
       </div>
       <div class="info-progress">
         <div class="now-level">
+          <!-- img src level-icon[1-5] 變更來設定等級標籤 -->
           <img class="mx-1" src="./assets/img/level-icon-1.svg" alt="" srcset="">
         </div>
         <div class="vip-progress-bar">
-          <!-- 這邊設定進度條％數 -->
+          <!-- 這邊 inline-style 可設定進度條％數 -->
           <div class="progress-persent" style="width: 37%;"></div>
         </div>
         <div class="next-level">
+          <!-- img src level-icon[1-5] 變更來設定等級標籤 -->
           <img class="mx-1" src="./assets/img/level-icon-2.svg" alt="" srcset="">
         </div>
       </div>
@@ -115,6 +117,7 @@
       </div>
     </div>
     <!-- vip info end -->
+
     <div class="container account-list-container">
       <div class=" card w-100" style="width: 18rem;">
         <ul class="list-group list-group-flush">
@@ -198,8 +201,7 @@
     </div>
 
     <div class="d-grid gap-2 mt-3 container">
-      <button class="btn btn-outline-primary fs-6 " type="button" data-bs-toggle="modal"
-        data-bs-target="#checkEdit">登出</button>
+      <button class="btn btn-outline-primary fs-6 " type="button">登出</button>
     </div>
 
 
