--- a/add_value_detail.html
+++ b/add_value_detail.html
@@ -29,7 +29,8 @@
           <div class="row border-bottom border-light px-0 mx-1">
             <label for="staticEmail" class="col-3 px-2 col-form-label fs-7 text-muted">狀態</label>
             <div class="col-9">
-              <input type="text" readonly class="form-control-plaintext text-primary fs-7" id="staticEmail" value="待付款">
+              <!--  text-primary text-danger text-muted-->
+              <input type="text" readonly class="form-control-plaintext text-muted fs-7" id="staticEmail" value="待付款">
             </div>
           </div>
           <div class="row border-bottom border-light px-0 mx-1">
