--- a/auction.html
+++ b/auction.html
@@ -47,6 +47,7 @@
     </div>
   </div>
   <!-- Toast 訊息，根據需求使用 end-->
+
   <!-- title -->
   <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header">
     <a class="back-icon" href="account.html"><img src="./assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
@@ -58,6 +59,7 @@
 
   <!-- 表單 -->
   <div class="container">
+    <!-- 銀行帳戶資訊 TODO:未綁定時顯示-->
     <div class="card w-100 mb-2 mt-2" style="width: 18rem;">
       <div class="card-title">銀行帳戶資訊 <span class="text-muted fs-7">(限綁定一次)</span></div>
       <div class="card-body">
@@ -88,7 +90,9 @@
           data-bs-target="#checkEdit">送出</button>
       </div>
     </div>
-    <!-- 銀行帳戶 -->
+    <!-- 銀行帳戶資訊 end -->
+
+    <!-- 銀行帳戶  TODO:已綁定時顯示 -->
     <div class="card w-100 mb-2 mt-2" style="width: 18rem;">
       <div class="card-title">銀行帳戶</div>
       <div class="card-body">
@@ -112,7 +116,7 @@
     </div>
     <!-- 銀行帳戶 end -->
 
-    <!-- 提款金額 -->
+    <!-- 提款金額 TODO:已綁定時顯示 -->
     <div class="card w-100 mb-2 mt-2" style="width: 18rem;">
       <div class="card-title">提款金額 <span class="text-muted fs-7">(單筆最低提款金額為1,000)</span></div>
       <div class="card-body">
