--- a/auction_detail.html
+++ b/auction_detail.html
@@ -28,6 +28,7 @@
           <div class="row border-bottom border-light px-0 mx-1">
             <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-gray62">狀態</label>
             <div class="col-8">
+              <!-- text-success text-danger text-muted -->
               <input type="text" readonly class="form-control-plaintext text-gray2e text-success fs-7" id="staticEmail"
                 value="成功">
             </div>
