--- a/bank_account.html
+++ b/bank_account.html
@@ -22,7 +22,7 @@
   <!-- title end -->
   <div class="container">
 
-    <!-- 銀行帳戶資訊(已綁定) -->
+    <!-- 銀行帳戶資訊 TODO:已綁定時顯示 -->
     <div class="card w-100 mb-2 mt-2" style="width: 18rem;">
       <div class="card-title">銀行帳戶資訊</div>
       <div class="card-body">
@@ -44,9 +44,9 @@
         </form>
       </div>
     </div>
-    <!-- 銀行帳戶資訊(已綁定) end -->
+    <!-- 銀行帳戶資訊 end -->
 
-    <!-- 銀行帳戶資訊 -->
+    <!-- 銀行帳戶資訊 TODO:未綁定時顯示 -->
     <div class="card w-100 mb-2 mt-2" style="width: 18rem;">
       <div class="card-title">銀行帳戶資訊 <span class="text-muted fs-7">(限綁定一次)</span></div>
       <div class="card-body">
