--- a/identity_verify.html
+++ b/identity_verify.html
@@ -21,6 +21,7 @@
     </h2>
   </div>
   <!-- title end -->
+
   <!-- Modal -->
   <div class="modal fade" id="showImgModal" tabindex="-1" aria-labelledby="showImgModalLabel" aria-hidden="true">
     <div class="modal-dialog m-0 bg-black">
@@ -38,7 +39,7 @@
   <!-- modal end -->
 
   <div class="container">
-    <!-- 身分證驗證(已驗證) -->
+    <!-- 身分證驗證 TODO:已驗證時顯示 -->
     <div class="card w-100 mb-2 mt-2" style="width: 18rem;">
       <div class="card-title">身份證資訊</div>
       <div class="card-body">
@@ -70,7 +71,7 @@
     </div>
     <!-- 身分證驗證(已驗證) end-->
 
-    <!-- 銀行帳戶資訊(已驗證) -->
+    <!-- 銀行帳戶資訊 TODO:已驗證時顯示 -->
     <div class="card w-100 mb-2 mt-2" style="width: 18rem;">
       <div class="card-title">銀行帳戶資訊</div>
       <div class="card-body">
@@ -113,7 +114,7 @@
     </div>
     <!-- 銀行帳戶資訊(已驗證) end-->
 
-    <!-- 身分證驗證 -->
+    <!-- 身分證驗證 TODO:尚未驗證時顯示-->
     <div class="card w-100 mb-2 mt-2" style="width: 18rem;">
       <div class="card-title">身份證驗證</div>
       <div class="card-body">
@@ -170,7 +171,7 @@
     </div>
     <!-- 身分證驗證 end -->
 
-    <!-- 銀行帳戶驗證 -->
+    <!-- 銀行帳戶驗證 TODO:尚未驗證時顯示 -->
     <div class="card w-100 mb-4 mt-2" style="width: 18rem;">
       <div class="card-title">銀行帳戶驗證</div>
       <div class="card-body">
@@ -233,8 +234,7 @@
   </div>
 
   <div class="d-grid gap-2 mt-3 mb-4">
-    <button class="btn btn-primary btn-lin fs-6" type="button" data-bs-toggle="modal"
-      data-bs-target="#checkEdit">送出</button>
+    <button class="btn btn-primary btn-lin fs-6" type="button">送出</button>
   </div>
 
   <!-- offcanvas -->
