--- a/info_list.html
+++ b/info_list.html
@@ -21,10 +21,11 @@
     <div class="icon-right fs-7 text-primary">全部已讀</div>
   </div>
   <!-- title end -->
+
   <div class="container mt-2 pb-5">
     <!-- list -->
     <a class="d-block text-decoration-none card mb-1" href="info_detail.html">
-      <!-- 已讀 msg class 添加 msg-card-readed-->
+      <!-- TODO:已讀 msg class 添加 msg-card-readed-->
       <div class="card-body py-3 px-3 position-relative msg-card msg-card-readed">
         <div class="d-flex flex-row mb-1">
           <div class="col-auto d-flex flex-column">
