--- a/promotion_detail.html
+++ b/promotion_detail.html
@@ -19,8 +19,11 @@
     <h2 class="fs-6 mb-0 text-center">
       優惠名稱
     </h2>
-  </div><!-- title end -->
-  <img class="w-100" src="https://fakeimg.pl/375x155/" alt="promotion">
+  </div>
+  <!-- title end -->
+
+  <img style="width: 100%;height: 155px;" class="w-100" src="https://fakeimg.pl/375x155/" alt="promotion">
+
   <!-- 資訊 -->
   <div class="container py-3">
     <h2 class="fs-6 text-primary mb-2">內文標題</h2>
