--- a/promotions.html
+++ b/promotions.html
@@ -20,23 +20,6 @@
   </div>
   <!-- title end -->
 
-  <!-- <div class="container">
-        <ul class="row nav nav-pills mb-3 justify-content-between" id="pills-tab" role="tablist">
-            <li class="nav-item col-3" role="presentation">
-                <button class="nav-link fs-7 w-100 active" id="pills-list-1-tab" data-bs-toggle="pill" data-bs-target="#pills-list-1" type="button" role="tab" aria-controls="pills-list-1" aria-selected="true">全部優惠</button>
-            </li>
-            <li class="nav-item col-3" role="presentation">
-                <button class="nav-link fs-7 w-100" id="pills-list-2-tab" data-bs-toggle="pill" data-bs-target="#pills-list-2" type="button" role="tab" aria-controls="pills-list-2" aria-selected="false">活動</button>
-            </li>
-            <li class="nav-item col-3" role="presentation">
-                <button class="nav-link fs-7 w-100" id="pills-list-3-tab" data-bs-toggle="pill" data-bs-target="#pills-list-3" type="button" role="tab" aria-controls="pills-list-3" aria-selected="false">新人首存</button>
-            </li>
-            <li class="nav-item col-3" role="presentation">
-                <button class="nav-link fs-7 w-100" id="pills-list-4-tab" data-bs-toggle="pill" data-bs-target="#pills-list-4" type="button" role="tab" aria-controls="pills-list-4" aria-selected="false">日常活動</button>
-            </li>
-        </ul>
-      </div> -->
-
   <!-- banner -->
   <div class="promotion-banner"></div>
   <!-- banner end-->
@@ -46,40 +29,40 @@
     <div class="tab-content d-flex flex-row justify-content-center" id="pills-tabContent">
       <div class="tab-pane fade show active" id="pills-list-1" role="tabpanel" aria-labelledby="pills-list-1-tab">
         <a class="d-block text-decoration-none text-white" href="promotion_detail.html">
-          <img class="w-100 mb-2" src="https://fakeimg.pl/345x142/" alt="promotion">
+          <img class="w-100 mb-2" style="height:142px" src="https://fakeimg.pl/345x142/" alt="promotion">
         </a>
         <a class="d-block text-decoration-none text-white" href="promotion_detail.html">
-          <img class="w-100 mb-2" src="https://fakeimg.pl/345x142/" alt="promotion">
+          <img class="w-100 mb-2" style="height:142px" src="https://fakeimg.pl/345x142/" alt="promotion">
         </a>
         <a class="d-block text-decoration-none text-white" href="promotion_detail.html">
-          <img class="w-100 mb-2" src="https://fakeimg.pl/345x142/" alt="promotion">
+          <img class="w-100 mb-2" style="height:142px" src="https://fakeimg.pl/345x142/" alt="promotion">
         </a>
         <a class="d-block text-decoration-none text-white" href="promotion_detail.html">
-          <img class="w-100 mb-2" src="https://fakeimg.pl/345x142/" alt="promotion">
+          <img class="w-100 mb-2" style="height:142px" src="https://fakeimg.pl/345x142/" alt="promotion">
         </a>
       </div>
       <div class="tab-pane fade" id="pills-list-2" role="tabpanel" aria-labelledby="pills-list-2-tab">
         <a class="d-block text-decoration-none text-white" href="promotion_detail.html">
-          <img class="w-100 mb-2" src="https://fakeimg.pl/345x142/" alt="promotion">
+          <img class="w-100 mb-2" style="height:142px" src="https://fakeimg.pl/345x142/" alt="promotion">
         </a>
         <a class="d-block text-decoration-none text-white" href="promotion_detail.html">
-          <img class="w-100 mb-2" src="https://fakeimg.pl/345x142/" alt="promotion">
+          <img class="w-100 mb-2" style="height:142px" src="https://fakeimg.pl/345x142/" alt="promotion">
         </a>
         <a class="d-block text-decoration-none text-white" href="promotion_detail.html">
-          <img class="w-100 mb-2" src="https://fakeimg.pl/345x142/" alt="promotion">
+          <img class="w-100 mb-2" style="height:142px" src="https://fakeimg.pl/345x142/" alt="promotion">
         </a>
       </div>
       <div class="tab-pane fade" id="pills-list-3" role="tabpanel" aria-labelledby="pills-list-3-tab">
         <a class="d-block text-decoration-none text-white" href="promotion_detail.html">
-          <img class="w-100 mb-2" src="https://fakeimg.pl/345x142/" alt="promotion">
+          <img class="w-100 mb-2" style="height:142px" src="https://fakeimg.pl/345x142/" alt="promotion">
         </a>
         <a class="d-block text-decoration-none text-white" href="promotion_detail.html">
-          <img class="w-100 mb-2" src="https://fakeimg.pl/345x142/" alt="promotion">
+          <img class="w-100 mb-2" style="height:142px" src="https://fakeimg.pl/345x142/" alt="promotion">
         </a>
       </div>
       <div class="tab-pane fade" id="pills-list-4" role="tabpanel" aria-labelledby="pills-list-4-tab">
         <a class="d-block text-decoration-none text-white" href="promotion_detail.html">
-          <img class="w-100 mb-2" src="https://fakeimg.pl/345x142/" alt="promotion">
+          <img class="w-100 mb-2" style="height:142px" src="https://fakeimg.pl/345x142/" alt="promotion">
         </a>
       </div>
     </div>
