--- a/vip_level.html
+++ b/vip_level.html
@@ -40,7 +40,7 @@
         <img class="mx-1" src="./assets/img/level-icon-1.svg" alt="" srcset="">
       </div>
       <div class="vip-progress-bar">
-        <!-- 這邊設定進度條％數 -->
+        <!-- 這邊 inline-style 可設定進度條％數 -->
         <div class="progress-persent" style="width: 37%;"></div>
       </div>
       <div class="next-level">
