--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
 
 <body>
   <!-- brand -->
-  <div class="d-flex container-fluid justify-content-center p-0">
+  <div class="d-flex container justify-content-between align-items-center " style="padding-left: 15px;">
     <a class="navbar-brand d-flex h-2" href="#">
-      <img src="assets/img/webo-logo.png" alt="WEBO">
+      <img style="width: 100px;" src="assets/img/webo-logo.png" alt="WEBO">
     </a>
+    <div class="d-flex flex-row badge_btns">
+      <div class="start_btn fs-8 align-middle" data-bs-toggle="modal" data-bs-target="#login">登入</div>
+      <div class="end_btn fs-8 align-middle" data-bs-toggle="modal" data-bs-target="#signUp">註冊</div>
+    </div>
   </div>
   <!-- brand end -->
 
@@ -71,10 +75,6 @@
           <div class="fs-7 text-black-33">您還未登入</div>
           <div class="fs-8 text-gray95">登入/註冊後查看更多訊息</div>
         </div>
-        <div class="d-flex flex-row badge_btns">
-          <div class="start_btn fs-8 align-middle" data-bs-toggle="modal" data-bs-target="#login">登入</div>
-          <div class="end_btn fs-8 align-middle" data-bs-toggle="modal" data-bs-target="#signUp">註冊</div>
-        </div>
       </div>
     </div>
   </div>
@@ -91,6 +91,19 @@
     </div>
   </div>
   <!-- 網站優勢 end -->
+
+  <!-- 公益 -->
+  <div class="mb-3 py-2 mt-1 text-center">
+    <img src="./assets/img/welfare.svg" alt="" srcset="">
+    <div class="welfare-wrap">
+      <img class="welfare-title" src="./assets/img/welfare-title.svg" alt="">
+      <div>
+        並不是所有人出生都能享有同等的好運，世界上存在的需多「弱勢」族群是需要被幫助的，正所謂能力越大責任越大，我們也相當重視回饋社會這塊，並積極投入公益行列之中，威博每月都會提撥一筆公益基金，捐獻給真正需要幫助的弱勢族群，這其中也包含著每位會員的的一份力量。<br /><br />
+        我們都深信好的付出能獲得更好的回報，您使用威博平台的每一筆儲值，威博都會依照金額額外提撥0.3%納入公益基金中，涓滴成河積善成德，在把握機會的同時，一同將這份幸運共享出去。
+      </div>
+    </div>
+  </div>
+  <!-- 公益 end -->
 
   <!-- webo 比較 -->
   <div class="webo-compare mb-3 py-2 mt-1 text-center">
