--- a/promotions.html
+++ b/promotions.html
@@ -24,6 +24,32 @@
   <div class="promotion-banner"></div>
   <!-- banner end-->
 
+  <div class="container">
+    <ul class="row nav nav-pills hide-scroll-bar mb-3 justify-content-between" id="pills-tab" role="tablist">
+      <li class="nav-item col-3" role="presentation">
+        <button class="nav-link fs-7 w-100 active" id="pills-list-1-tab" data-bs-toggle="pill"
+          data-bs-target="#pills-list-1" type="button" role="tab" aria-controls="pills-list-1"
+          aria-selected="true">分類名稱</button>
+      </li>
+      <li class="nav-item col-3" role="presentation">
+        <button class="nav-link fs-7 w-100" id="pills-list-2-tab" data-bs-toggle="pill" data-bs-target="#pills-list-2"
+          type="button" role="tab" aria-controls="pills-list-2" aria-selected="false">分類名稱</button>
+      </li>
+      <li class="nav-item col-3" role="presentation">
+        <button class="nav-link fs-7 w-100" id="pills-list-3-tab" data-bs-toggle="pill" data-bs-target="#pills-list-3"
+          type="button" role="tab" aria-controls="pills-list-3" aria-selected="false">分類名稱</button>
+      </li>
+      <li class="nav-item col-3" role="presentation">
+        <button class="nav-link fs-7 w-100" id="pills-list-4-tab" data-bs-toggle="pill" data-bs-target="#pills-list-4"
+          type="button" role="tab" aria-controls="pills-list-4" aria-selected="false">分類名稱</button>
+      </li>
+      <li class="nav-item col-3" role="presentation">
+        <button class="nav-link fs-7 w-100" id="pills-list-4-tab" data-bs-toggle="pill" data-bs-target="#pills-list-4"
+          type="button" role="tab" aria-controls="pills-list-4" aria-selected="false">分類名稱</button>
+      </li>
+    </ul>
+  </div>
+
   <!-- 列表 -->
   <div class="container" style="margin-bottom: 55px;">
     <div class="tab-content d-flex flex-row justify-content-center" id="pills-tabContent">
