--- a/account.html
+++ b/account.html
@@ -179,6 +179,12 @@
             <img src="./assets/img/arrow-right.svg" alt="">
           </a>
           <a class="d-block text-secondary text-decoration-none list-group-item d-flex flex-row align-items-center justify-content-start mx-3 border-bottom border-light "
+            href="public_welfare.html">
+            <img class="account-list-icon me-2" src="./assets/img/icon-heart.svg" alt="">
+            <div class="account-list-txt me-auto">威博公益</div>
+            <img src="./assets/img/arrow-right.svg" alt="">
+          </a>
+          <a class="d-block text-secondary text-decoration-none list-group-item d-flex flex-row align-items-center justify-content-start mx-3 border-bottom border-light "
             href="reason_bet.html">
             <img class="account-list-icon me-2" src="./assets/img/icon-brain.png" alt="">
             <div class="account-list-txt me-auto">理性博彩</div>
