feat: add is fix status

--- a/index.html
+++ b/index.html
@@ -256,7 +256,9 @@
         <div class="tab-pane fade overflow-auto products show active" id="v-pills-1" role="tabpanel"
           aria-labelledby="v-pills-tab-1">
           <div class="products-inner">
-            <div class="mb-2 overflow-hidden rounded-3" data-bs-toggle="modal" data-bs-target="#before-room-modal">
+            <!-- 維護中請加上 isFix class -->
+            <div class="mb-2 overflow-hidden rounded-3 isFix" data-bs-toggle="modal"
+              data-bs-target="#before-room-modal">
               <img class="w-100" src="./assets/img/product-sport-1.png" alt="">
             </div>
             <div class="mb-2 overflow-hidden rounded-3" data-bs-toggle="modal" data-bs-target="#before-room-modal">
