feat: done my wallet page

--- a/account.html
+++ b/account.html
@@ -141,6 +141,12 @@
       <div class=" card w-100" style="width: 18rem;">
         <ul class="list-group list-group-flush">
           <a class="d-block text-secondary text-decoration-none list-group-item d-flex flex-row align-items-center justify-content-start mx-3 border-bottom border-light "
+            href="my_wallet.html">
+            <img class="account-list-icon me-2" src="./assets/img/icon-my-wallet.png" alt="">
+            <div class="account-list-txt me-auto">我的錢包</div>
+            <img src="./assets/img/arrow-right.svg" alt="">
+          </a>
+          <a class="d-block text-secondary text-decoration-none list-group-item d-flex flex-row align-items-center justify-content-start mx-3 border-bottom border-light "
             href="transe_history.html">
             <img class="account-list-icon me-2" src="./assets/img/icon-trans.png" alt="">
             <div class="account-list-txt me-auto">交易紀錄</div>
