--- a/info_list.html
+++ b/info_list.html
@@ -12,6 +12,15 @@
 </head>
 
 <body>
+  <!-- loader 顯示請 class 加上 show -->
+  <div id="loader" class="show">
+    <div class="loader-wrap">
+      <img src="./assets/img/loader-logo.png" alt="">
+      <p class="mt-3 mb-0 text-white">載入中...</p>
+    </div>
+  </div>
+  <!-- loader end -->
+
   <!-- title -->
   <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header">
     <a class="back-icon" href="account.html"><img src="./assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
